--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>Contato</title>
         <link rel="stylesheet" href="stilos.css">
     </head>
-    <body>
-        <h1>Formulario de contato</h1>  
-        <form id="contact-form" >
+    <body> 
+        <form id="contact-form" class="form-wrapper" >
+            <h1>Formulario de contato</h1> 
             <div>
                 <label for="name"> Nome</label>
                 <input id="name" type="text" name="name" required>
